# mobdec

./: CMakeLists.txt  README.md
configuration_file/: coupled_2D_and_3D_analysis_for_moving_objects_detection_with_a_moving_camera.yml
src/component/clustering/: kmeansOpticalFlow.cpp  kmeansOpticalFlow.h
src/component/featureDetector/: anmsDetector.cpp  anmsDetector.h  deleteFeaturePointWithGroundTruth.cpp  deleteFeaturePointWithGroundTruth.h  fastdetector.cpp  fastdetector.h  ldofDetector.cpp  ldofDetector.h
src/component/featureTracker/: kltTracker.cpp  kltTracker.h
src/component/labeling/: combiningGeometricConstraintOpticalFlow.cpp  combiningGeometricConstraintOpticalFlow.h  falseNegativeSuppression.cpp  falseNegativeSuppression.h  labelingFeaturePoint.cpp  labelingFeaturePoint.h  labelingStaticInitialisation.cpp  labelingStaticInitialisation.h
src/component/motionEstimation/: cameraCompensation.cpp  cameraCompensation.h  essentialMatrix.cpp  essentialMatrix.h  essentialMatrixKMeans.cpp  essentialMatrixKMeans.h  slowdownStopMotionDetection.cpp  slowdownStopMotionDetection.h
src/component/reconstruction/: reconstruction3dTriangulation.cpp  reconstruction3dTriangulation.h  reconstructionQuality.cpp  scale.cpp  (+4 more)
src/core/: camera.cpp  camera.h  data.cpp  data.h  dataReader.cpp  dataReader.h  dataWriter.cpp  dataWriter.h  debug.h  featurePoint.cpp  featurePoint.h  initialiseProject.cpp  initialiseProject.h  labeling.h  lifeCycleManager.cpp  lifeCycleManager.h  mVariant.h  mobdec.cpp  phase.h  settings.cpp  settings.h  utils.cpp  utils.h  video.cpp  video.h
(+16 files in other folders)
